--- a/main.css
+++ b/main.css
@@ -39,7 +39,8 @@ header p{
     margin:auto;
 }
 button{
-    min-width:100px;
+    width: 12em;
+    height:5em;
     margin:0.5em;
     padding:0.5em;
     background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #3d94f6), color-stop(1, #1e62d0) );
@@ -90,4 +91,16 @@ section:last-child{
     section .list-heading, section ul, section li{
         float:left;
     }
+    section li{
+        min-height:100px;
+        text-align: center;
+    }
+
+    section li a.website-link{
+    display: block;
+    margin-right: 1em;
+    text-align: right;
+    color: grey;
+    font-size: 0.6em;
+}
 
