--- a/main.css
+++ b/main.css
@@ -29,17 +29,21 @@ header p{
 }
 #player-wrapper{
     width: 100%;
-    margin: 2em auto;
+    margin: 2em auto 1em;
 }
-    #player-wrapper .musesStyleReset{
+    #player .musesStyleReset{
         margin:auto;
     }
+    #metadata-display {
+        margin:1em;
+        color:#1e62d0;
+    }
 #webradios-lists{
-    min-height: 500px;
+    min-height:500px;
     margin:auto;
 }
 button{
-    width: 200px;
+    width:200px;
     height:4em;
     margin:0.5em;
     padding:0.5em;
