--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-h1, p, ul, li{
+h1, p, ul, li, header, content, footer{
     margin:0;
     padding:0;
 }
@@ -17,16 +17,27 @@ body{
     background-color: white;
     font-family: sans-serif;
 }
-header, content, footer{
+header, content{
+    text-align: center;
+
+}
+header{
+    width: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background: white;
+    border-bottom: 1px solid grey;
+}
+footer, content{
     display:block;
+    padding-top: 280px;
     width: 90%;
     max-width: 1440px;
     margin: auto;
 }
-header, content{
-    text-align: center;
-}
 footer{
+    bottom: 0;
     color:grey;
 }
 header p{
@@ -41,7 +52,7 @@ header p{
         margin-top: 2em;
     }
     #player-wrapper .musesStyleReset{
-       margin: auto;
+        margin: auto;
     }
     #webradio-infos li{
         width: 50%;
