--- a/main.css
+++ b/main.css
@@ -121,14 +121,15 @@ section{
 section:last-child{
     border-bottom:0;
 }
-section:nth-child(odd) {
+section:nth-child(odd){
     background: #fff;
 }
-section:nth-child(even) {
+section:nth-child(even){
     background: #eee;
 }
-    section .list-heading{
-        width:12%;
+    .list-heading{
+        width:10%;
+        margin-left:2%;
         font-size: 0.8em;
         color:grey;
     }
